--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@prisma/client": "^5.21.1"
+  },
   "devDependencies": {
     "@types/node": "^22.8.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-    },
+    "typescript": "^5.6.3",
+    "prisma": "^5.21.1"
+  },
   "engines": {
     "node": "^22.11.0"
   },
