--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "author": "Gabriel Moretti",
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/node": "^22.8.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "prisma": "^5.21.1"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": "^22.11.0"
