--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,12 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./src/*"]
     },
   },
-  "include": [
-    "src/**/*.ts"
+  "exclude": [
+    "node_modules"
   ],
 }
