--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "prettier/prettier": "error",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/no-floating-promises": "off",
-    "@typescript-eslint/consistent-type-assertions": "off"
+    "@typescript-eslint/consistent-type-assertions": "off",
+    "@typescript-eslint/no-invalid-void-type": "off",
+    "@typescript-eslint/no-unsafe-argument": "off"
   }
 }
