--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
+    "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
