feat: finish flow of user signup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/no-invalid-void-type": "off",
-    "@typescript-eslint/no-unsafe-argument": "off"
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/method-signature-style": "off"
   }
 }
