--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "validator": "^13.12.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
     "@types/validator": "^13.12.2",
