--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/no-invalid-void-type": "off",
     "@typescript-eslint/no-unsafe-argument": "off",
-    "@typescript-eslint/method-signature-style": "off"
+    "@typescript-eslint/method-signature-style": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
