--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "validator": "^13.12.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.4",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
