--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ NODE_ENV=development
 
 HTTP_PORT=3030
 DATABASE_URL="postgresql://user:user@localhost:5432/database_name?schema=public"
+
 JWT_SECRET_KEY=any-secret
+JWT_EXPIRES_IN=1h
