--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Gabriel Moretti",
   "license": "ISC",
   "scripts": {
-    "dev": "tsnd -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/main/server.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "npx tsnd -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/main/server.ts",
+    "migrate:deploy": "npx prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
@@ -37,7 +38,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
-    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "engines": {
