--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     command: sh -c "npx prisma migrate deploy && npm run dev"
     env_file:
       - .env
+    restart: unless-stopped
     ports:
       - ${HTTP_PORT}:${HTTP_PORT}
     depends_on:
