chore: adiciona variaveis no .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,12 @@ BASE_URL=http://localhost:3030
 NODE_ENV=development
 
 HTTP_PORT=3030
-DATABASE_URL="postgresql://user:user@localhost:5432/database_name?schema=public"
 
 JWT_SECRET_KEY=any-secret
 JWT_EXPIRES_IN=1h
+
+POSTGRES_USER=docker
+POSTGRES_PASSWORD=docker
+POSTGRES_DB=teddy_tech_test
+
+DATABASE_URL="postgresql://docker:docker@db:5432/teddy_tech_test?schema=public"
