--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0"
@@ -24,6 +25,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.4",
     "@types/swagger-ui-express": "^4.1.7",
