--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Gabriel Moretti",
   "license": "ISC",
   "scripts": {
+    "test": "jest",
     "prepare": "husky install",
     "dev": "npx tsnd -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/main/server.ts",
     "migrate:deploy": "npx prisma migrate deploy"
@@ -26,10 +27,12 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@swc/jest": "^0.2.37",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/express-rate-limit": "^5.1.3",
     "@types/hpp": "^0.2.6",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.4",
     "@types/swagger-ui-express": "^4.1.7",
@@ -43,6 +46,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
