--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
@@ -13,6 +13,7 @@
     },
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ],
 }
