--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .env
     restart: unless-stopped
     ports:
-      - ${HTTP_PORT}:${HTTP_PORT}
+      - ${HTTP_PORT:-3030}:${HTTP_PORT:-3030}
     depends_on:
       db:
         condition: service_healthy
@@ -35,6 +35,17 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  test_db:
+    container_name: app_integration_tests
+    image: postgres:15-alpine
+    restart: unless-stopped
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
 
 volumes:
   pgdata:
