--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "Gabriel Moretti",
   "license": "ISC",
   "scripts": {
-    "test": "jest",
     "prepare": "husky install",
     "dev": "npx tsnd -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/main/server.ts",
-    "migrate:deploy": "npx prisma migrate deploy"
+    "migrate:deploy": "npx prisma migrate deploy",
+    "test": "npx dotenv -e .env.test -- jest --runInBand",
+    "migrate:test": "npx dotenv -e .env.test -- npm run migrate:deploy",
+    "up:test": "docker-compose --env-file .env.test up -d test_db"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
@@ -35,9 +37,11 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.4",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -50,6 +54,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
+    "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
