feat: add integration tests for auth routes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/no-invalid-void-type": "off",
     "@typescript-eslint/no-unsafe-argument": "off",
     "@typescript-eslint/method-signature-style": "off",
-    "@typescript-eslint/no-non-null-assertion": "off"
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-misused-promises": "off"
   }
 }
