--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prepare": "husky install",
     "dev": "npx tsnd -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/main/server.ts",
     "migrate:deploy": "npx prisma migrate deploy",
-    "test": "npx dotenv -e .env.test -- jest --runInBand",
     "migrate:test": "npx dotenv -e .env.test -- npm run migrate:deploy",
+    "test": "npx dotenv -e .env.test -- jest",
     "up:test": "docker-compose --env-file .env.test up -d test_db"
   },
   "dependencies": {
